<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context=".Bantuan">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="FAQ"
		android:textSize="15sp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"/>

	<LinearLayout
		android:id="@+id/faq"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="10dp"
		android:background="@color/AliceBlue">
		<TextView
			android:id="@+id/txt_help1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/help1"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="15dp"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>
		<TextView
			android:id="@+id/txt_help2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/help2"
			android:layout_margin="10dp"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>

		<TextView
			android:id="@+id/txt_help3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/help3"
			android:layout_margin="10dp"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>
	</LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="Contact Us"
		android:textSize="15sp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/faq"
		android:background="@color/AliceBlue"
		android:layout_margin="10dp"
		android:orientation="vertical">
		<TextView
			android:id="@+id/id1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:text=" supriantoarif79@gmail.com"
			android:textColor="@android:color/black"
			android:textSize="15sp"
			android:drawableLeft="@drawable/ic_pesan"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginBottom="10dp"
			android:text=" 0813332349024"
			android:textColor="@android:color/black"
			android:textSize="15sp"
			android:drawableLeft="@drawable/ic_phone"/>
	</LinearLayout>
</LinearLayout>
